mudanças em home(css,html e js)

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,99 +12,118 @@
 
 <body>
   <header class="hero">
-<div class="nav">
+    <div class="nav">
 
-  
-  <!-- Logo -->
-  <div class="logo">
-    <img src="/img/logoLongaW.png" />
-  </div>
-  
-  <ul class="nav-em-partes">
-    <li alt="Início"><a href="/pages/home.html">Início</a></li>
-    <li><a href="/pages/favoritos.html">Favoritos</a></li>
-    <li><a href="">Notificações</a></li>
-  </ul>
-  <div class="nav-em-partes">
-    <div class="pesquisar-container">
-      <input type="search" placeholder="Pesquisar" />
-      <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
+
+      <!-- Logo -->
+      <div class="logo">
+        <img src="/img/logoLongaW.png" />
+      </div>
+
+      <ul class="nav-em-partes">
+        <li alt="Início"><a href="/pages/home.html">Início</a></li>
+        <li><a href="/pages/favoritos.html">Favoritos</a></li>
+        <li><a href="">Notificações</a></li>
+      </ul>
+      <div class="nav-em-partes">
+        <div class="pesquisar-container">
+          <input type="search" placeholder="Pesquisar" />
+          <!--
+          <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
+          -->
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-    
+
   </header>
   <main>
-    
+    <!--SECTION-->
     <div class="lista">
+      <div class="carrossel">
+        <!--BTN-->
+        <button class="esquerdo">
+          < </button>
+            <!-- imagem dos filmes e seus nomes-->
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/depois-do-universo.png" />
+              <div class="overlay">
+                <h1> Depois do universo</h1>
+              </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
+              <div class="overlay">
+                <h1> O Cemiterio das Almas Perdidas</h1>
+              </div>
+            </div>
 
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/depois-do-universo.png" />
-        <div class="overlay">
-          <h1> Depois do universo</h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
-        <div class="overlay">
-          <h1> O Cemiterio das Almas Perdidas</h1>
-        </div>
-      </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/isolados.png" />
+              <div class="overlay">
+                <h1> Isolados</h1>
+              </div>
 
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/isolados.png" />
-        <div class="overlay">
-          <h1> Isolados</h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img"src="/img/tela-inicial/tropa-de-elite.png" />
-        <div class="overlay">
-          <h1> Tropa de Elite</h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/marginal-alad.png" />
-        <div class="overlay">
-          <h1> Marginal Alad</h1>
-        </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/tropa-de-elite.png" />
+              <div class="overlay">
+                <h1> Tropa de Elite</h1>
+              </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/marginal-alad.png" />
+              <div class="overlay">
+                <h1> Marginal Alad</h1>
+              </div>
+            </div>
+            <!----------------SECTION---------------->
+            <button class="direito"> > </button>
+            <!--BTN-->
       </div>
     </div>
+    <!--SECTION-->
     <div class="lista">
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/sos-fada-manu.png" />
-        <div class="overlay">
-          <h1>SOS Fada Manu</h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img"src="/img/tela-inicial/turma-da-monica.png" />
-        <div class="overlay">
-          <h1>Turma da Monica </h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/os-farofeiros.png" />
-        <div class="overlay">
-          <h1>Os Farofeiros</h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/a-magia-de-aruna.png" />
-        <div class="overlay">
-          <h1>A Magia de Aruna</h1>
-        </div>
-      </div>
-      <div class="cartao">
-        <img class="section-img" src="/img/tela-inicial/ainda-estou-aqui.png" />
-        <div class="overlay">
-          <h1>Ainda Estou Aqui</h1>
-        </div>
+      <div class="carrossel">
+        <!--BTN-->
+        <button class="esquerdo">
+          < </button>
+            <!-- imagens filmes e seus nomes-->
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/sos-fada-manu.png" />
+              <div class="overlay">
+                <h1>SOS Fada Manu</h1>
+              </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/turma-da-monica.png" />
+              <div class="overlay">
+                <h1>Turma da Monica </h1>
+              </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/os-farofeiros.png" />
+              <div class="overlay">
+                <h1>Os Farofeiros</h1>
+              </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/a-magia-de-aruna.png" />
+              <div class="overlay">
+                <h1>A Magia de Aruna</h1>
+              </div>
+            </div>
+            <div class="cartao">
+              <img class="section-img" src="/img/tela-inicial/ainda-estou-aqui.png" />
+              <div class="overlay">
+                <h1>Ainda Estou Aqui</h1>
+              </div>
+            </div>
+            <!----------------SECTION---------------->
+            <button class="direito"> > </button>
+            <!--BTN-->
       </div>
     </div>
-    </div>
-    </div>
-    </div>
+    <!--SECTION-->
   </main>
 
   <script src="/js/home.js"></script>
