consegui fazer o cadastro funcionar

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background">
         <div class="background2">
-            <form class="formulario">
+            <div class="formulario">
                 <div class="logo">
                     <img src="/img/logoLongaW.png" />
                 </div>
@@ -20,12 +20,12 @@
                 <input type="email" placeholder="Digite seu email:" id="email" name="email" required>
                 <label for="senha">Crie sua senha:</label>
                 <input type="password" placeholder="Digite uma senha:" id="senha" name="senha" required>
-                <button class="btn-cadastrar">
+                <button id="btn-cadastrar">
                     Cadastrar
                 </button>
                 
-                <a href="">Já tem conta? Entre aqui!</a>
-            </form>
+                <a href="/index.html">Já tem conta? Entre aqui!</a>
+            </div>
         </div>
 
     </div>
