--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="logo">
                     <img src="img/logoLongaW.png" />
                 </div>
-                <label for="nome">Nome de usuário:</label>
-                <input type="text" placeholder="Digite seu nome de usuario:" id="nome" name="nome" required>
+                <label for="E-mail">E-mail do usuário:</label>
+                <input type="email" placeholder="Digite seu E-mail:" id="email" name="E-mail" required>
                 <label for="senha">Senha do usuário:</label>
                 <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
                 <button class="login" type="submit">Login</button>
