--- a/pages/home.html
+++ b/pages/home.html
@@ -1,132 +1,93 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RetroCena</title>
   <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
   <link rel="stylesheet" href="/css/home.css">
-  <link rel="stylesheet" href="/pages/carrossel.html">
 </head>
-
 <body>
   <header class="hero">
-    <div class="nav">
-
-
-      <!-- Logo -->
+    <nav class="nav">
       <div class="logo">
-        <img src="/img/logoLongaW.png" />
+        <img src="/img/logoLongaW.png" alt="Logo RetroCena" />
       </div>
 
       <ul class="nav-em-partes">
-        <li alt="Início"><a href="/pages/home.html">Início</a></li>
+        <li><a href="/pages/home.html">Início</a></li>
         <li><a href="/pages/favoritos.html">Favoritos</a></li>
-        <li><a href="">Notificações</a></li>
+        <li><a href="#">Notificações</a></li>
       </ul>
+
       <div class="nav-em-partes">
         <div class="pesquisar-container">
           <input type="search" placeholder="Pesquisar" />
-          <!--
-          <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
-          -->
         </div>
       </div>
-    </div>
-
+    </nav>
   </header>
+
   <main>
-    <!--SECTION-->
-    <div class="lista">
-      <div class="carrossel">
-        <!--BTN-->
-        <button class="esquerdo">
-          < </button>
-            <!-- imagem dos filmes e seus nomes-->
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/depois-do-universo.png" />
-              <div class="overlay">
-                <h1> Depois do universo</h1>
-              </div>
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
-              <div class="overlay">
-                <h1> O Cemiterio das Almas Perdidas</h1>
-              </div>
-            </div>
-
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/isolados.png" />
-              <div class="overlay">
-                <h1> Isolados</h1>
-              </div>
-
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/tropa-de-elite.png" />
-              <div class="overlay">
-                <h1> Tropa de Elite</h1>
-              </div>
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/marginal-alad.png" />
-              <div class="overlay">
-                <h1> Marginal Alad</h1>
-              </div>
-            </div>
-            <!----------------SECTION---------------->
-            <button class="direito"> > </button>
-            <!--BTN-->
+    <section class="lista-container">
+      <button class="seta esquerdo" aria-label="Anterior"> < </button>
+      <div class="carrossel-window">
+        <div class="carrossel-track">
+          <div class="cartao">
+            <img src="/img/tela-inicial/depois-do-universo.png" alt="Filme">
+            <div class="overlay"><h1>Depois do Universo</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png" alt="Filme">
+            <div class="overlay"><h1>O Cemitério das Almas Perdidas</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/isolados.png" alt="Filme">
+            <div class="overlay"><h1>Isolados</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/tropa-de-elite.png" alt="Filme">
+            <div class="overlay"><h1>Tropa de Elite</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/marginal-alad.png" alt="Filme">
+            <div class="overlay"><h1>Marginal Alad</h1></div>
+          </div>
+        </div>
       </div>
-    </div>
-    <!--SECTION-->
-    <div class="lista">
-      <div class="carrossel">
-        <!--BTN-->
-        <button class="esquerdo">
-          < </button>
-            <!-- imagens filmes e seus nomes-->
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/sos-fada-manu.png" />
-              <div class="overlay">
-                <h1>SOS Fada Manu</h1>
-              </div>
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/turma-da-monica.png" />
-              <div class="overlay">
-                <h1>Turma da Monica </h1>
-              </div>
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/os-farofeiros.png" />
-              <div class="overlay">
-                <h1>Os Farofeiros</h1>
-              </div>
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/a-magia-de-aruna.png" />
-              <div class="overlay">
-                <h1>A Magia de Aruna</h1>
-              </div>
-            </div>
-            <div class="cartao">
-              <img class="section-img" src="/img/tela-inicial/ainda-estou-aqui.png" />
-              <div class="overlay">
-                <h1>Ainda Estou Aqui</h1>
-              </div>
-            </div>
-            <!----------------SECTION---------------->
-            <button class="direito"> > </button>
-            <!--BTN-->
+      <button class="seta direito" aria-label="Próximo"> > </button>
+    </section>
+
+    <section class="lista-container">
+      <button class="seta esquerdo" aria-label="Anterior"> < </button>
+      <div class="carrossel-window">
+        <div class="carrossel-track">
+          <div class="cartao">
+            <img src="/img/tela-inicial/sos-fada-manu.png" alt="Filme">
+            <div class="overlay"><h1>SOS Fada Manu</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/turma-da-monica.png" alt="Filme">
+            <div class="overlay"><h1>Turma da Mônica</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/os-farofeiros.png" alt="Filme">
+            <div class="overlay"><h1>Os Farofeiros</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/a-magia-de-aruna.png" alt="Filme">
+            <div class="overlay"><h1>A Magia de Aruna</h1></div>
+          </div>
+          <div class="cartao">
+            <img src="/img/tela-inicial/ainda-estou-aqui.png" alt="Filme">
+            <div class="overlay"><h1>Ainda Estou Aqui</h1></div>
+          </div>
+        </div>
       </div>
-    </div>
-    <!--SECTION-->
+      <button class="seta direito" aria-label="Próximo"> > </button>
+    </section>
   </main>
 
   <script src="/js/home.js"></script>
 </body>
-
 </html>
