header e nav prontos

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,44 +5,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RetroCena</title>
-  <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+  <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
   <link rel="stylesheet" href="/css/home.css">
   <link rel="stylesheet" href="/pages/carrossel.html">
 </head>
 
 <body>
-  <header class="hero">
-    <div class="nav">
-
-
-      <!-- Logo -->
-      <div class="logo">
-        <img src="/img/logoLongaW.png" />
-      </div>
-
-      <ul class="nav-em-partes">
-        <li alt="Início"><a href="/pages/home.html">Início</a></li>
-        <li><a href="/pages/favoritos.html">Favoritos</a></li>
-        <li><a href="">Notificações</a></li>
-      </ul>
-      <div class="nav-em-partes">
-        <div class="pesquisar-container">
-          <input type="search" placeholder="Pesquisar" />
-          <!--
-          <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
-          -->
-        </div>
+  <!---------NAVEGATION BAR--------->
+  <nav>
+    <!-- Logo -->
+    <div class="logo">
+      <img src="/img/logoLongaW.png" />
+    </div>
+    
+    <ul class="nav-em-partes">
+      <li alt="Início"><a href="/pages/home.html">Início</a></li>
+      <li><a href="/pages/favoritos.html">Favoritos</a></li>
+      <li><a href="">Notificações</a></li>
+      <li><a href="/pages/alterar.html">Minha Conta</a></li>
+      <li><a href="">Configurações</a></li>
+    </ul>
+    <div class="nav-em-partes">
+      <div class="pesquisar-container">
+        <input type="search" placeholder="Pesquisar" />
       </div>
     </div>
-
+   </div>
+  </nav>
+  <!--------------------------------------------------------->
+  <header class="hero">
+    <p>Minha Mãe É uma Peça</p>
   </header>
+
   <main>
     <!--SECTION-->
     <div class="lista">
       <div class="carrossel">
         <!--BTN-->
         <button class="esquerdo">
-          < </button>
+           </button>
             <!-- imagem dos filmes e seus nomes-->
             <div class="cartao">
               <img class="section-img" src="/img/tela-inicial/depois-do-universo.png" />
