consegui os dois forms

--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroCena</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+    <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
     <div class="background">
         <div class="background2">
-            <form class="formulario">
+            <div class="formulario">
                 <div class="logo">
                     <img src="img/logoLongaW.png" />
                 </div>
-                <label for="E-mail">E-mail do usuário:</label>
+                <label for="email">E-mail do usuário:</label>
                 <input type="email" placeholder="Digite seu E-mail:" id="email" name="E-mail" required>
                 <label for="senha">Senha do usuário:</label>
                 <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
-                <button class="login" type="submit">Login</button>
+                <button id="btnLogin" class="login">Login</button>
                 <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
                 <a>Esqueceu sua senha?</a>
-            </form>
+            </div>
         </div>
     </div>
-    </div>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
