--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RetroCena</title>
-  <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+  <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
   <link rel="stylesheet" href="/css/home.css">
   <link rel="stylesheet" href="/pages/carrossel.html">
 </head>
