--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -20,7 +20,7 @@
                 <input type="email" placeholder="Digite seu email:" id="email" name="email" required>
                 <label for="senha">Crie sua senha:</label>
                 <input type="password" placeholder="Digite uma senha:" id="senha" name="senha" required>
-                <button id="btn-cadastrar">
+                <button class="btn-cadastrar" id="btn-cadastrar">
                     Cadastrar
                 </button>
                 
