corrigindo header e nav

--- a/pages/home.html
+++ b/pages/home.html
@@ -33,7 +33,9 @@
   </nav>
   <!--------------------HEADER------------------------------------->
   <header class="hero">
-    <p>Minha Mãe É uma Peça</p>
+    <img src="/img/tela-inicial/minha-mae-e-uma-peca-3.png"/>
+    <div class="sobreposto"> <p class="sobreposto">Minha Mãe É uma Peça</p></div>
+   
   </header>
 
   <main>
