--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="background">
-        <div class="background2">
+        <div>
             <div class="formulario">
                 <div class="logo">
                     <img src="/img/logoLongaW.png" />
@@ -23,13 +23,10 @@
                 <button class="btn-cadastrar" id="btn-cadastrar">
                     Cadastrar
                 </button>
-                
                 <a href="/index.html">Já tem conta? Entre aqui!</a>
             </div>
         </div>
-
     </div>
-
     <script src="/js/cadastro.js"></script>
 </body>
 
