finalização do js alterar

--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -23,20 +23,22 @@
                     <img id="usuario" src="/img/tela-perfil/perfil.png" />
                 </div>
                 <span class="imutavel">Nome de usuario:</span>
-                <span class="mutavel">Fulano</span>
+                <span class="mutavel"></span>
                 <span class="imutavel">E-mail:</span>
-                <span class="mutavel">fulano@gmail.com</span>
+                <span class="mutavel"></span>
                 <span class="imutavel">senha:</span>
-                <span class="mutavel">010925</span>
-                <a href="/index.html" class="editar">
-                    Editar
+                <span class="mutavel"></span>
+                <a href="#" class="editar" onclick="editarPerfil(event)">
+                      Editar
                 </a>
-                <a href="/pages/cadastro.html" class="remover">
-                    Remover
+
+                <a href="#" class="remover" onclick="excluirPerfil(event)">
+                      Remover
                 </a>
             </form>
         </div>
     </main>
+    <script src="/js/alterar.js"></script>
 </body>
 
 </html>
