--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -17,12 +17,10 @@
                     <img src="/img/logoLongaW.png" />
                 </div>
                 <label for="email">Endereço de E-mail:</label>
-                <input type="email" placeholder="Digite seu email:" id="email" name="email" required>
+                <input type="email" id="email" placeholder="Email">
                 <label for="senha">Crie sua senha:</label>
-                <input type="password" placeholder="Digite uma senha:" id="senha" name="senha" required>
-                <button class="btn-cadastrar" id="btn-cadastrar">
-                    Cadastrar
-                </button>
+                <input type="password" id="senha" placeholder="Senha">
+                <button id="btn-cadastrar">Cadastrar</button>
                 
                 <a href="/index.html">Já tem conta? Entre aqui!</a>
             </div>
