--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -12,56 +12,54 @@
 <body>
     <main>
         <div class="logo">
-            <img id="logo2" src="/img/logoLongaW.png" />
+            <img id="logo2" src="/img/logoLongaW.png" alt="Logo RetroCena" />
         </div>
+        
         <div class="flex">
             <div class="nome">
                 <span class="favoritos">Favoritos</span>
             </div>
             <div class="banner">
-                <div class="cartao">
-                    <img id="sombra" src="/img/favoritos/bacurau.png" />
+                <article class="cartao">
+                    <img id="sombra" src="/img/favoritos/bacurau.png" alt="Cartaz do filme Bacurau" />
                     <div class="overlay">
                         <h1>Bacurau</h1>
                         <h2>Em Bacurau, um vilarejo do sertão desaparece dos mapas e passa a ser alvo de ataques
-                            misteriosos. <br> Seus moradores se unem para resistir e lutar pela sobrevivência. </h2>
-                        <a class="botao">Assistir</a>
+                            misteriosos. 
+                             Seus moradores se unem para resistir e lutar pela sobrevivência.</h2>
+                        <a class="botao" href="#">Assistir</a>
                     </div>
-                </div>
+                </article>
             </div>
         </div>
-        <div class="lista">
 
-            <img src="/img/favoritos/ainda-estou-aqui.png" />
-            <img src="/img/favoritos/central-do-brasil.png" />
-            <img src="/img/favoritos/cidade-de-deus.png" />
-            <img src="/img/favoritos/que-horas-ela-volta.png" />
-            <img src="/img/favoritos/carandiru.png" />
-        </div>
+        <section class="lista">
+            <img src="/img/favoritos/ainda-estou-aqui.png" alt="Ainda Estou Aqui" />
+            <img src="/img/favoritos/central-do-brasil.png" alt="Central do Brasil" />
+            <img src="/img/favoritos/cidade-de-deus.png" alt="Cidade de Deus" />
+            <img src="/img/favoritos/que-horas-ela-volta.png" alt="Que Horas Ela Volta" />
+            <img src="/img/favoritos/carandiru.png" alt="Carandiru" />
+        </section>
 
-        <div class="lista">
-            <img src="/img/favoritos/ultima-parada.png" />
-            <img src="/img/favoritos/somos-tao-jovens.png" />
-            <img src="/img/favoritos/o-auto-da-compadecida.png" />
-            <img src="/img/favoritos/pixoto.png" />
-            <img src="/img/favoritos/somos-tao-jovensw.png" />
-        </div>
+        <section class="lista">
+            <img src="/img/favoritos/ultima-parada.png" alt="Última Parada" />
+            <img src="/img/favoritos/somos-tao-jovens.png" alt="Somos Tão Jovens" />
+            <img src="/img/favoritos/o-auto-da-compadecida.png" alt="O Auto da Compadecida" />
+            <img src="/img/favoritos/pixoto.png" alt="Pixote" />
+            <img src="/img/favoritos/somos-tao-jovensw.png" alt="Somos Tão Jovens" />
+        </section>
 
-
-
-        <div class="sidebar">
-            <div class="linhas">
-                <img id="icones " src="/img/barra-lateral/3linhas.png" />
-            </div>
-            <a href="/pages/alterar.html"><img id="icones " src="/img/barra-lateral/user-circle.png" /></a>
-            <img id="icones " src="/img/barra-lateral/lupa-pesquisa.png" />
-            <a href="/pages/home.html"><img id="icones " src="/img/barra-lateral/casa.png" /> </a>
-            <img id="icones " src="/img/barra-lateral/favoritos.png" />
-            <img id="icones " src="/img/barra-lateral/notificacoes.png" />
-            <div class="configuracoes">
-                <img id="icones " src="/img/barra-lateral/configuracoes.png" />
-            </div>
-        </div>
+        <aside class="sidebar">
+            <ul>
+                <li><img id="icones" src="/img/barra-lateral/3linhas.png" alt="Menu" /></li>
+                <li><a href="/pages/alterar.html"><img id="icones" src="/img/barra-lateral/user-circle.png" alt="Perfil" /></a></li>
+                <li><img id="icones" src="/img/barra-lateral/lupa-pesquisa.png" alt="Pesquisar" /></li>
+                <li><a href="/pages/home.html"><img id="icones" src="/img/barra-lateral/casa.png" alt="Início" /></a></li>
+                <li><img id="icones" src="/img/barra-lateral/favoritos.png" alt="Favoritos" /></li>
+                <li><img id="icones" src="/img/barra-lateral/notificacoes.png" alt="Notificações" /></li>
+                <li class="configuracoes"><img id="icones" src="/img/barra-lateral/configuracoes.png" alt="Configurações" /></li>
+            </ul>
+        </aside>
     </main>
 </body>
 
