Site completo faltando apenas a transição

--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -5,16 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroCena</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
+   <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
     <link rel="stylesheet" href="/css/alterar.css">
 </head>
 
 <body>
-
+<!---------NAVEGATION BAR--------->
+  <nav>
+    <!-- Logo -->
+    <div class="logo">
+      <img src="/img/logoLongaW.png" />
+    </div>
+    
+    <ul class="nav-em-partes">
+      <li alt="Início"><a href="/pages/home.html">Início</a></li>
+      <li alt="Favoritos"><a href="/pages/favoritos.html">Favoritos</a></li>
+      <li alt="Notificações"><a href="">Notificações</a></li>
+      <li alt="Minha Conta"><a href="/pages/alterar.html">Minha Conta</a></li>
+      <li alt="Configurações"><a href="">Configurações</a></li>
+    </ul>
+    <div class="nav-em-partes">
+      <div class="pesquisar-container">
+        <input type="search" placeholder="Pesquisar" />
+      </div>
+    </div>
+   </div>
+  </nav>
     <main>
-        <div class="logo">
-            <img id="logo2" src="/img/logoLongaW.png" />
-        </div>
 
         <div class="background">
             <form>
@@ -38,6 +55,42 @@
             </form>
         </div>
     </main>
+
+     <footer class="footer">
+    <div class="outros-apps">
+      <span>Nossas redes sociais:</span>
+      <div class="app">
+
+
+        <div class="apps">
+          <img src="/img/instagram_foto.png" alt="logo do instagram">
+          <p>@RetroCena</p>
+        </div>
+        <div class="apps">
+          <img src="/img/facebook_logo.png" alt="logo do facebook">
+          <p>@Retro_Cena</p>
+        </div>
+        <div class="apps">
+          <img src="/img/whatsapp_logo.png" alt="logo do whatsapp">
+          <p>48 9965-8901</p>
+        </div>
+      </div>
+      <div class="direitos-autorais">
+        <p>© 2025 RetroCena - Todos os direitos reservados.</p>
+      </div>
+    </div>
+    <div class="colaboradores">
+      <p>Colaboradores:</p>
+      <ol>
+        <li>Pietra Kruger</li>
+        <li>Maria Clara</li>
+        <li>Sarah Cristine</li>
+        <li>Joana Martins</li>
+        <li>Richard Cauã</li>
+        <li>Lucas Lima</li>
+      </ol>
+    </div>
+  </footer>
     <script src="/js/alterar.js"></script>
 </body>
 
