--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,90 +15,151 @@
   <nav>
     <!-- Logo -->
     <div class="logo">
-      <img src="/img/logoLongaW.png" />
+      <img alt="Logo RetroCena" src="/img/logoLongaW.png" />
     </div>
-    
+
     <ul class="nav-em-partes">
       <li alt="Início"><a href="/pages/home.html">Início</a></li>
-      <li><a href="/pages/favoritos.html">Favoritos</a></li>
-      <li><a href="">Notificações</a></li>
-      <li><a href="/pages/alterar.html">Minha Conta</a></li>
-      <li><a href="">Configurações</a></li>
+      <li alt="Favoritos"><a href="/pages/favoritos.html">Favoritos</a></li>
+      <li alt="Notificações"><a href="">Notificações</a></li>
+      <li alt="Minha Conta"><a href="/pages/alterar.html">Minha Conta</a></li>
+      <li alt="Configurações"><a href="">Configurações</a></li>
     </ul>
     <div class="nav-em-partes">
       <div class="pesquisar-container">
-        <input type="search" placeholder="Pesquisar" />
+        <input alt="Pesquisar" type="search" placeholder="Pesquisar" />
       </div>
     </div>
-   </div>
+    </div>
   </nav>
   <!--------------------HEADER------------------------------------->
   <header class="hero">
-    <img src="/img/tela-inicial/minha-mae-e-uma-peca-3.png"/>
-    <div class="sobreposto"> <p class="sobreposto">Minha Mãe É uma Peça</p></div>
-   
+    <img alt="Minha Mãe É uma Peça" src="/img/tela-inicial/minha-mae-e-uma-peca-3.png" />
+    <div class="sobreposto">
+      <p class="sobreposto">Minha Mãe É uma Peça</p>
+    </div>
+
   </header>
 
   <main>
     <section class="lista-container">
-      <button class="seta esquerdo" aria-label="Anterior"> < </button>
-      <div class="carrossel-window">
-        <div class="carrossel-track">
-          <div class="cartao">
-            <img src="/img/tela-inicial/depois-do-universo.png" alt="Filme">
-            <div class="overlay"><h1>Depois do Universo</h1></div>
+      <button alt="seta esquerda" class="seta esquerdo" aria-label="Anterior">
+        < </button>
+          <div class="carrossel-window">
+            <div class="carrossel-track">
+              <div class="cartao">
+                <img alt="Depois do Universo" src="/img/tela-inicial/depois-do-universo.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Depois do Universo</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="O Cemitério das Almas Perdidas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png"
+                  alt="Filme">
+                <div class="overlay">
+                  <h1>O Cemitério das Almas Perdidas</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="Isolados" src="/img/tela-inicial/isolados.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Isolados</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="Tropa de Elite" src="/img/tela-inicial/tropa-de-elite.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Tropa de Elite</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="Marginal Alad" src="/img/tela-inicial/marginal-alad.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Marginal Alad</h1>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png" alt="Filme">
-            <div class="overlay"><h1>O Cemitério das Almas Perdidas</h1></div>
-          </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/isolados.png" alt="Filme">
-            <div class="overlay"><h1>Isolados</h1></div>
-          </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/tropa-de-elite.png" alt="Filme">
-            <div class="overlay"><h1>Tropa de Elite</h1></div>
-          </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/marginal-alad.png" alt="Filme">
-            <div class="overlay"><h1>Marginal Alad</h1></div>
-          </div>
-        </div>
-      </div>
-      <button class="seta direito" aria-label="Próximo"> > </button>
+          <button alt="seta direita" class="seta direito" aria-label="Próximo"> > </button>
     </section>
 
     <section class="lista-container">
-      <button class="seta esquerdo" aria-label="Anterior"> < </button>
-      <div class="carrossel-window">
-        <div class="carrossel-track">
-          <div class="cartao">
-            <img src="/img/tela-inicial/sos-fada-manu.png" alt="Filme">
-            <div class="overlay"><h1>SOS Fada Manu</h1></div>
+      <button alt="seta esquerda" class="seta esquerdo" aria-label="Anterior">
+        < </button>
+          <div class="carrossel-window">
+            <div class="carrossel-track">
+              <div class="cartao">
+                <img alt="SOS Fada Manu" src="/img/tela-inicial/sos-fada-manu.png" alt="Filme">
+                <div class="overlay">
+                  <h1>SOS Fada Manu</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="Turma da Mônica" src="/img/tela-inicial/turma-da-monica.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Turma da Mônica</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="Os Farofeiros" src="/img/tela-inicial/os-farofeiros.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Os Farofeiros</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="A Magia de Aruna" src="/img/tela-inicial/a-magia-de-aruna.png" alt="Filme">
+                <div class="overlay">
+                  <h1>A Magia de Aruna</h1>
+                </div>
+              </div>
+              <div class="cartao">
+                <img alt="Ainda Estou Aqui" src="/img/tela-inicial/ainda-estou-aqui.png" alt="Filme">
+                <div class="overlay">
+                  <h1>Ainda Estou Aqui</h1>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/turma-da-monica.png" alt="Filme">
-            <div class="overlay"><h1>Turma da Mônica</h1></div>
-          </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/os-farofeiros.png" alt="Filme">
-            <div class="overlay"><h1>Os Farofeiros</h1></div>
-          </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/a-magia-de-aruna.png" alt="Filme">
-            <div class="overlay"><h1>A Magia de Aruna</h1></div>
-          </div>
-          <div class="cartao">
-            <img src="/img/tela-inicial/ainda-estou-aqui.png" alt="Filme">
-            <div class="overlay"><h1>Ainda Estou Aqui</h1></div>
-          </div>
-        </div>
-      </div>
-      <button class="seta direito" aria-label="Próximo"> > </button>
+          <button alt="seta direita" class="seta direito" aria-label="Próximo"> > </button>
     </section>
   </main>
+  <footer class="footer">
+    <div class="outros-apps">
+      <span>Nossas redes sociais:</span>
+      <div class="app">
+
+
+        <div class="apps">
+          <img src="/img/instagram_foto.png" alt="logo do instagram">
+          <p>@RetroCena</p>
+        </div>
+        <div class="apps">
+          <img src="/img/facebook_logo.png" alt="logo do facebook">
+          <p>@Retro_Cena</p>
+        </div>
+        <div class="apps">
+          <img src="/img/whatsapp_logo.png" alt="logo do whatsapp">
+          <p>48 9965-8901</p>
+        </div>
+      </div>
+      <div class="direitos-autorais">
+        <p>© 2025 RetroCena - Todos os direitos reservados.</p>
+      </div>
+    </div>
+    <div class="colaboradores">
+      <p>Colaboradores:</p>
+      <ol>
+        <li>Pietra Kruger</li>
+        <li>Maria Clara</li>
+        <li>Sarah Cristine</li>
+        <li>Joana Martins</li>
+        <li>Richard Cauã</li>
+        <li>Lucas Lima</li>
+      </ol>
+    </div>
+  </footer>
 
   <script src="/js/home.js"></script>
 </body>
+
 </html>
