--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -5,33 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroCena</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+   <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
     <link rel="stylesheet" href="/css/favoritos.css">
 </head>
 
 <body>
+    <!---------NAVEGATION BAR--------->
+  <nav>
+    <!-- Logo -->
+    <div class="logo">
+      <img src="/img/logoLongaW.png" />
+    </div>
+    
+    <ul class="nav-em-partes">
+       <li alt="Início"><a href="/pages/home.html">Início</a></li>
+      <li alt="Favoritos"><a href="/pages/favoritos.html">Favoritos</a></li>
+      <li alt="Notificações"><a href="">Notificações</a></li>
+      <li alt="Minha Conta"><a href="/pages/alterar.html">Minha Conta</a></li>
+      <li alt="Configurações"><a href="">Configurações</a></li>
+    </ul>
+    <div class="nav-em-partes">
+      <div class="pesquisar-container">
+        <input type="search" placeholder="Pesquisar" />
+      </div>
+    </div>
+   </div>
+  </nav>
+  <!--------------------HEADER------------------------------------->
+  <header class="hero">
+    <img id="sombra" src="/img/favoritos/bacurau.png" alt="Cartaz do filme Bacurau" />
+    <div class="sobreposto"> <p class="sobreposto"> Bacurau</div>
+   
+  </header>
     <main>
-        <div class="logo">
-            <img id="logo2" src="/img/logoLongaW.png" alt="Logo RetroCena" />
-        </div>
-        
-        <div class="flex">
-            <div class="nome">
-                <span class="favoritos">Favoritos</span>
-            </div>
-            <div class="banner">
-                <article class="cartao">
-                    <img id="sombra" src="/img/favoritos/bacurau.png" alt="Cartaz do filme Bacurau" />
-                    <div class="overlay">
-                        <h1>Bacurau</h1>
-                        <h2>Em Bacurau, um vilarejo do sertão desaparece dos mapas e passa a ser alvo de ataques
-                            misteriosos. 
-                             Seus moradores se unem para resistir e lutar pela sobrevivência.</h2>
-                        <a class="botao" href="#">Assistir</a>
-                    </div>
-                </article>
-            </div>
-        </div>
+        <h1>Outros favoritos</h1>
 
         <section class="lista">
             <img src="/img/favoritos/ainda-estou-aqui.png" alt="Ainda Estou Aqui" />
@@ -49,18 +56,42 @@
             <img src="/img/favoritos/somos-tao-jovensw.png" alt="Somos Tão Jovens" />
         </section>
 
-        <aside class="sidebar">
-            <ul>
-                <li><img id="icones" src="/img/barra-lateral/3linhas.png" alt="Menu" /></li>
-                <li><a href="/pages/alterar.html"><img id="icones" src="/img/barra-lateral/user-circle.png" alt="Perfil" /></a></li>
-                <li><img id="icones" src="/img/barra-lateral/lupa-pesquisa.png" alt="Pesquisar" /></li>
-                <li><a href="/pages/home.html"><img id="icones" src="/img/barra-lateral/casa.png" alt="Início" /></a></li>
-                <li><img id="icones" src="/img/barra-lateral/favoritos.png" alt="Favoritos" /></li>
-                <li><img id="icones" src="/img/barra-lateral/notificacoes.png" alt="Notificações" /></li>
-                <li class="configuracoes"><img id="icones" src="/img/barra-lateral/configuracoes.png" alt="Configurações" /></li>
-            </ul>
-        </aside>
     </main>
+     <footer class="footer">
+    <div class="outros-apps">
+      <span>Nossas redes sociais:</span>
+      <div class="app">
+
+
+        <div class="apps">
+          <img src="/img/instagram_foto.png" alt="logo do instagram">
+          <p>@RetroCena</p>
+        </div>
+        <div class="apps">
+          <img src="/img/facebook_logo.png" alt="logo do facebook">
+          <p>@Retro_Cena</p>
+        </div>
+        <div class="apps">
+          <img src="/img/whatsapp_logo.png" alt="logo do whatsapp">
+          <p>48 9965-8901</p>
+        </div>
+      </div>
+      <div class="direitos-autorais">
+        <p>© 2025 RetroCena - Todos os direitos reservados.</p>
+      </div>
+    </div>
+    <div class="colaboradores">
+      <p>Colaboradores:</p>
+      <ol>
+        <li>Pietra Kruger</li>
+        <li>Maria Clara</li>
+        <li>Sarah Cristine</li>
+        <li>Joana Martins</li>
+        <li>Richard Cauã</li>
+        <li>Lucas Lima</li>
+      </ol>
+    </div>
+  </footer>
 </body>
 
 </html>
